# http-server

./: .gitignore  .gitmodules  CMakeLists.txt  Coroutine.h  EpollManager.h  Network.h  README.md  TcpClient.h  TcpServer.h  build_frontend.sh  error.h  main.cpp
.github/workflows/: cmake.yml
app/client/: README.md  package.json
app/client/public/: manifest.json
app/client/src/: App.js  exampleNotes.js  index.css  index.js  theme.js
app/client/src/components/: Feed.js  Image.js  Login.js  LoginHandler.js  LogoutHandler.js  Markdown.js  Navbar.js  Note.js  Scrollable.js  SharedNoteHandler.js
app/server/: CMakeLists.txt  Note.h  User.h  main.cpp
app/server/utils/: SharedMap.h
http-server/: CMakeLists.txt  minimalExample.cpp
http-server/include/: Coroutine.h  Debug.h  EpollManager.h  File.h  HttpMessage.h  HttpRequest.h  HttpResponse.h  HttpServer.h  RequestHandler.h  TcpClient.h  Validators.h  error.h
src/: Coroutine.h  Debug.h  EpollManager.h  HttpMessage.h  HttpRequest.h  HttpResponse.h  HttpServer.h  Network.h  RequestHandler.h  RequestUtils.h  TcpClient.h  TcpServer.h  Validators.h  main.cpp
